# keTerrain

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  vcpkg.json
.github/workflows/: cmake.yml  codeql.yml
src/: CMakeLists.txt  keterrain.cpp  keterrain.hpp  main.cpp  noise.cpp  noise.hpp  palette.hpp  random.cpp  random.hpp  types.hpp
src/gui/: CMakeLists.txt  gui.cpp  gui.hpp
